<resources>
    <string name="app_name">TalkoLoco</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="talko_loco_will_need_to_verify_your_account_carrier_charges_may_apply">Talko Loco will need to verify your account. Carrier charges may apply.</string>
    <string name="your_phone_number">your phone number</string>
    <string name="next">Next</string>
    <string name="verify_instructions">Enter the 6-digit code we sent by SMS to %s</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile_picture">Profile picture</string>
    <string name="enter_your_name_and_add_an_optional_profile_picture">Enter your name and add an optional profile picture.</string>
    <string name="your_name">Your name</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="is_this_the_correct_number">Is this the correct number?</string>
    <string name="yes">Yes</string>
    <string name="settings">Settings</string>
    <string name="current_phone_number">Current Phone Number</string>
    <string name="communities">Communities</string>
    <string name="startingMessage">Tap on [symbol] in the top right corner to start a new chat. You can chat with contacts who have TalkoLoco installed on thier phone.</string>
    <string name="chats">Chats</string>
    <string name="start_messaging">Start messaging</string>
    <string name="randomdescription">randomDescription</string>
    <string name="type_message">Type message...</string>
    <string name="camera">camera</string>
    <string name="dang_you_look_very_pretty">Dang! you look very pretty!! :)</string>
    <string name="this_is_my_outfit_for_later_i_m_very_excited">This is my outfit for later! I\'m very Excited!</string>
    <string name="messages_are_end_to_end_encrypted_nno_one_outside_this_chat_not_even_talko_loco_can_read_or_listen_to_them">Messages are end-to-end encrypted.\nNo one outside this chat, not even Talko Loco, can read or listen to them.</string>
    <string name="_1_350_454_2345">+1(350)454-2345</string>
    <string name="nov_11">Nov 11</string>
    <string name="tap_on_in_the_top_right_corner_to_start_a_new_chat">Tap on + in the top right corner to start a new chat</string>
    <string name="phone_number">Phone Number</string>
    <string name="about">About</string>
    <string name="delete_account">Delete Account</string>
    <string name="fab_description">Add a new item</string>
    <string name="tap_on_the_in_the_top_right_corner_to_start_a_new_chat">Tap on the ⊕ in the top right corner to start a new chat</string>
    <string name="you_can_chat_with_contacts_who_have_talko_loco_installed_on_their_phone">You can chat with contacts who have Talko Loco installed on their phone.</string>
    <string name="new_chat">New chat</string>
    <string name="enter_a_phone_number_to_start_a_new_chat">Enter a phone number to start a new chat</string>
    <string name="_1_509_555_5555">+1(509)555-5555</string>
    <string name="start_a_chat">Start a chat</string>
    <string name="_5_njkl">5\nJKL</string>
    <string name="_1">1</string>
    <string name="_2_nabc">2\nABC</string>
    <string name="_3_ndef">3\nDEF</string>
    <string name="_4_nghi">4\nGHI</string>
    <string name="_6_nmno">6\nMNO</string>
    <string name="_7_npqrs">7\nPQRS</string>
    <string name="_8_ntuv">8\nTUV</string>
    <string name="_9_nwxyz">9\nWXYZ</string>
    <string name="_0">0</string>
    <string name="x">⌫</string>
    <string name="cancel">Cancel</string>
</resources>