<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_phone_number"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/subtitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/talko_loco_will_need_to_verify_your_account_carrier_charges_may_apply"
        android:textSize="15sp"
        android:textColor="#666666"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/phoneInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_phone_number"
        android:inputType="phone"
        android:background="@drawable/edit_text_background"
        android:padding="16dp"
        android:textSize="15sp"
        android:layout_marginTop="32dp"
        android:maxLength="17"
        android:textCursorDrawable="@color/black"
        app:layout_constraintTop_toBottomOf="@id/subtitleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_background"
        android:textColor="#FFFFFF"
        app:layout_constraintTop_toBottomOf="@id/phoneInput"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>