<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Top Bar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chats"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/newChatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/randomdescription"
            android:src="@drawable/ic_add"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/emptyStateMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_on_in_the_top_right_corner_to_start_a_new_chat"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/startMessaging"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/startMessaging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_messaging"
        android:textColor="@color/primary_blue"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emptyStateMessage" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>

